--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -20,7 +20,7 @@ nav a {
 .submenu {
     display: none;
     position: absolute;
-    background-color: rgba(255, 236, 150, 0.705);
+    background-color: rgb(255, 255, 255);
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
@@ -28,7 +28,7 @@ nav li:hover .submenu {
     display: block;
 }
 .navbar{
-    background-color: rgba(255, 236, 150, 0.705);
+    background-color: rgb(255, 255, 255);
 }
 .navderecha {
     flex-direction: row-reverse;
@@ -62,14 +62,21 @@ a.nav-link:focus{
 
 }
 .d1{
-    background-color: #000000;
-    height: 200px;
+    height: 100vh;
 }
 .d2{
-    background-color: aqua;
-    height: 200px;
+    height: 100vh;
 }
 .d3{
-    background-color: blueviolet;
-    height: 200px;
+    height: 100vh;
+}
+.centro{
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.card-prod{
+    margin-top: 30px;
+}
+.card-img-top{
+    max-height: 300px;
 }
